--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "lucide-react": "^0.513.0",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "react": "^19.0.0",
